; ModuleID = '/home/carl/AnghaBench/linux/sound/isa/extr_cmi8328.c_snd_cmi8328_cfg_read.c'
source_filename = "/home/carl/AnghaBench/linux/sound/isa/extr_cmi8328.c_snd_cmi8328_cfg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @snd_cmi8328_cfg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_cmi8328_cfg_read(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = add nsw i64 %5, 3
  %7 = call i32 @outb(i32 67, i64 %6)
  %8 = load i64, i64* %3, align 8
  %9 = add nsw i64 %8, 3
  %10 = call i32 @outb(i32 33, i64 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i64, i64* %3, align 8
  %13 = add nsw i64 %12, 3
  %14 = call i32 @outb(i32 %11, i64 %13)
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @inb(i64 %15)
  ret i32 %16
}

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @inb(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
